# hwhelper

./: main.py  pyproject.toml
templates/: easter.html  index.html  style.css  view.html
uploads/: questions.csv
