[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hwhelper"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
werkzeug = "^1.0"
flask-table = "^0.5.0"
pytablereader = "^0.28.0"
pytablewriter = "^0.50.0"
pandas = "^1.0"
application = "^1.0"
[tool.poetry.dev-dependencies]
